--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -13,10 +13,10 @@
                     <p>Name: {{ heroName }} </p>
                     <p>Age: {{ heroAge }}</p>
                     <p>Special power: {{ superPower }}</p>
-                    <p>Weakness: {{ Weakness }}</p>
+                    <p>Weakness: {{ weakness }}</p>
                     <p>Id: {{ id }}</p>
                     <a href="new/{{id}}" class="btns">Learn More</a>
-                    <a href="/squad" class="btns">Add {{ name }} To Squad</a>
+                    <a href="/squad" class="btns">Add {{ heroName }} To Squad</a>
                 </div>
 
             {{/each}}
