[fixes #169797071] adds background image and styles the project

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,15 +1,8 @@
 {{#partial "content"}}
-    <section class="landing-pg">
-        <div class="land-left">
-        </div>
-        <div class="land-right">
-        </div>
-        <div class="hero-img">
-        </div>
+
         <div class="hero-desc">
             <h3>Be your own Hero</h3>
-            <a href="/hero-form"><button class="hero-btn btns">Create Hero</button></a>
+            <a href="/hero-form"><button class="btn btn-info">Create Hero</button></a>
         </div>
-    </section>
 {{/partial}}
 {{> layout.hbs}}
