--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -1,7 +1,5 @@
 {{#partial "content"}}
-    <section class="landing-pg">
-        <div class="land-left"></div>
-        <div class="land-right"></div>
+
         <form class="form" action="/new/hero" method="post">
             <h1>Create Your Hero</h1>
             <input type="text" placeholder="Enter your hero's name" name="heroName" required>
@@ -9,8 +7,7 @@
             <input type="text" placeholder="Enter your hero's special powers" name="superPower" required>
             <input type="text" placeholder="Enter your hero's weakness" name="weakness" required>
 
-            <input class="btns" type="submit">
+            <input class="btn btn-success" type="submit">
         </form>
-    </section>
 {{/partial}}
 {{> layout.hbs}}
