--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -1,26 +1,26 @@
 
 {{#partial "content"}}
-    <section class="landing-pg">
-        <div class="land-left">
-        </div>
-        <div class="land-right">
-        </div>
-        <h2> <a class="btns" href="/hero-form" >Create Your Hero</a> <br><br> CURRENT HEROES</h2>
+        <h2> <a class="btn btn-warning" href="/hero-form" >Create Your Hero</a> <br><br> CURRENT HEROES</h2>
         <div class="heroes">
-            {{#each hero}}
-                <div class="hero-item">
-                    <img src="/img/DIAMONDHEAD06_4C.png" alt="">
-                    <p>Name: {{ heroName }} </p>
-                    <p>Age: {{ heroAge }}</p>
-                    <p>Special power: {{ superPower }}</p>
-                    <p>Weakness: {{ weakness }}</p>
-                    <p>Id: {{ id }}</p>
-                    <a href="new/{{id}}" class="btns">Learn More</a>
-                    <a href="/squad" class="btns">Add {{ heroName }} To Squad</a>
-                </div>
+            <div class="row">
 
+                {{#each hero}}
+                <div class="col-md-6">
+                    <div class="card">
+                    <img src="/images/hero1.jpeg" alt="">
+                    <div class="container">
+                        <h3>Hero: {{ heroName }} </h3>
+                        <p>Age: {{ heroAge }}</p>
+                        <p>Special power: {{ superPower }}</p>
+                        <p>Weakness: {{ weakness }}</p>
+                        <p>Id: {{ id }}</p>
+                        <a href="new/{{id}}" class="btns">Learn More</a>
+                        <a href="/squad" class="btns">Add {{ heroName }} To Squad</a>
+                    </div>
+                </div>
+                </div>
             {{/each}}
         </div>
-    </section>
+    </div>
 {{/partial}}
 {{> layout.hbs}}
