--- a/src/main/resources/templates/more.hbs
+++ b/src/main/resources/templates/more.hbs
@@ -1,16 +1,12 @@
 {{#partial "content"}}
     <section class="landing-pg">
-        <div class="land-left">
-        </div>
-        <div class="land-right">
-        </div>
 
         <div class="hero-stats">
             <h1>{{hero.heroName}}</h1>
             <div class="hero-charts">
-                <div class="defence">Defence  <br><span class="def-cnt"></span></div>
-                <div class="distance">Speed <br><span class="dis-cnt"></span></div>
-                <div class="attack ">Attack<br><span class="at-cnt"></span></div>
+                <div class="defence">Defence  79% <br><span class="def-cnt"></span></div>
+                <div class="distance">Speed  87%<br><span class="dis-cnt"></span></div>
+                <div class="attack ">Attack  98%<br><span class="at-cnt"></span></div>
             </div><br><br>
             <a href="/hero" ><button class="btns back">Go Back</button></a>
         </div>
