--- a/src/main/resources/templates/squad.hbs
+++ b/src/main/resources/templates/squad.hbs
@@ -1,43 +1,39 @@
 {{#partial "content"}}
-    <section class="landing-pg">
-        <div class="land-left">
-        </div>
-        <div class="land-right">
-        </div>
-
         <div class="squad">
+            <a class="btn btn-warning" href="/squad-form">Create Your Squad</a>
             <div id="newMember">
-                <p class="close">&cross;</p>
                 <h2>Choose Squad Members</h2>
-                {{#each heroes}}
-                    <div class="hero-item">
-                        <img src="" alt="">
-                        <div class="hero-detail">
-                            <p>Name: {{heroName}}</p>
+                <div class="row">
+                    {{#each heroes}}
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="/images/hero3.jpeg" alt="Avatar" >
+                        <div class="container">
+                            <h3>Name: {{heroName}}</h3>
                             <p>Super power: {{ superPower }}</p>
-                            <a class="btns" href="/squad/new/{{id}}">Add To Squad</a>
+                            <a class="btn btn-primary" href="/squad/new/{{id}}">Add To Squad</a>
                         </div>
                     </div>
+                </div>
                 {{/each}}
             </div>
+        </div>
+</div>
         <h2>
-            <a class="btns" href="/squad-form">Create Your Squad</a>
             <br><br>
             {{#if squads}}
                 AVAILABLE SQUADS
             </h2>
                 {{#each squads}}
                     <div class="squad-cont">
-                        <img src="" alt="">
+                        <img src="/images/hero2.jpeg" alt="">
                         <div>
                             <h1>{{ squadName }} </h1>
                             <p>Id: {{squadId}}</p>
-                            <p>Purpose: {{squadPurpose}}</p>
                             <p>Max participants: {{ maxSize }}</p>
+                            <a class="btns" href="/squad/new/{{id}}">Add To Squad</a>
+
                             <br><br>
-                            <h3>MEMBERS</h3>
-                            <a class="btns" href="/new/member/{{squadId}}">Bind Id</a>
-                            <button class="addMember add-btn" >Add New Member</button>
                             {{#each squadMembers}}
                                 <div class="member-cont">
                                     <h5>Name: {{this.squadName}}</h5>
@@ -55,6 +51,5 @@
             {{/if}}
         </div>
 
-    </section>
 {{/partial}}
 {{> layout.hbs}}
