--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,19 +1,13 @@
 {{#partial "content"}}
-    <section class="landing-pg">
-        <div class="land-left">
-        </div>
-        <div class="land-right">
-        </div>
 
         <div class="success">
 
-            <h3>Success <br>  <span>{{ item }} </span> <br> Has been created <br>{{sqId}}</h3>
+            <h3 style="color: green;">Success <br>  <span style="color: black;">{{ item }} </span> <br> Has been created <br>{{sqId}}</h3>
 
-            <a class="btns btn-green" href="/hero">View Heroes</a>
-            <a class="btns btn-green" href="/squad">View Squads</a>
+            <a class="btn btn-primary" href="/hero">View Heroes</a>
+            <a class="btn btn-primary" href="/squad">View Squads</a>
 
 
         </div>
-    </section>
 {{/partial}}
 {{> layout.hbs}}
