[fixes #169797071] adds landing story and styles template

--- a/src/main/resources/templates/hero.hbs
+++ b/src/main/resources/templates/hero.hbs
@@ -15,7 +15,7 @@
                         <p>Weakness: {{ weakness }}</p>
                         <p>Id: {{ id }}</p>
                         <a href="new/{{id}}" class="btns">Learn More</a>
-                        <a href="/squad" class="btns">Add {{ heroName }} To Squad</a>
+                        <a href="/squad" class="btn btn-success">Add {{ heroName }} To Squad</a>
                     </div>
                 </div>
                 </div>
