--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,8 +1,16 @@
 {{#partial "content"}}
-
+<div class="whole">
+<div class="landing">
+    <p>...Thousands year back, in a galaxy far far from Earth, was a planet called Planet. This planet is believed to have had a replica of</p>
+    <p>Earth in 2019. You think I'm joking?! Just keep on Reading... Everyone one of us in the planet Planet had Superpowers.</p>
+    <p>What happened to it? Good question...keep on reading</p>
+    <p>You see, the replica of you decided to use the power for evil doings. Every other Supers tried to destroy your replica.</p>
+    <p>But, not one could succeed. The Great one from the Sky above said 'ONLY YOU CAN DESTROY YOU!'</p>
+</div>
         <div class="hero-desc">
-            <h3>Be your own Hero</h3>
+            <h3>WHAT ARE YOU WAITING FOR?</h3>
             <a href="/hero-form"><button class="btn btn-info">Create Hero</button></a>
         </div>
+</div>
 {{/partial}}
 {{> layout.hbs}}
