--- a/src/main/resources/public/images/css/styles.css
+++ b/src/main/resources/public/images/css/styles.css
@@ -1,3 +1,14 @@
+.landing {
+    text-align: center;
+    color: white;
+    font-size: 25px;
+}
+.whole {
+    background-color: black;
+}
+.hero-desc{
+    margin-left: 500px;
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0);
   transition: 0.3s;
@@ -14,6 +25,6 @@ body {
     background-image: url("/images/back2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;
+    color: yellow;
 }
 
