--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -2,7 +2,7 @@
 
         <div class="success">
 
-            <h3 style="color: green;">Success <br>  <span style="color: black;">{{ item }} </span> <br> Has been created <br>{{sqId}}</h3>
+            <h3 style="color: green;">Success <br>  <span style="color: white;">{{ item }} </span> <br>Has been Successful!<br>{{sqId}}</h3>
 
             <a class="btn btn-primary" href="/hero">View Heroes</a>
             <a class="btn btn-primary" href="/squad">View Squads</a>
